# PuXle

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  dev-setup.sh  directory_reorganization.md  package_analysis.md  pyproject.toml  requirements.txt  setup.py  test_all_puzzles.py
.github/workflows/: docs.yml
docs/: conf.py  index.rst  pddlfuse.md  requirements.txt
docs/api/: benchmark.rst  core.rst  index.rst  pddls.rst  puzzles.rst  utils.rst
docs/tutorials/: cayley_bridge.md  xtructure_bitpacking.md
puxle/: __init__.py  _lazy_imports.py  dotknot.py  hanoi.py  lightsout.py  maze.py  pancake.py  puzzle_base.py  rubikscube.py  slidepuzzle.py  sokoban.py  topspin.py  tsp.py
puxle/benchmark/: __init__.py  _deepcubea.py  benchmark.py  lightsout_deepcubea.py  rubikscube_deepcubea.py  rubikscube_santa.py  slidepuzzle_deepcubea.py
puxle/core/: __init__.py  puzzle_base.py  puzzle_state.py  scramble.py  trajectory.py
puxle/data/pddls/blocksworld/: domain.pddl  manifest.json
puxle/data/pddls/blocksworld/problems/: bw-H-01.pddl  bw-S-01.pddl  bw-S-02.pddl  bw-S-03.pddl  bw-S-04.pddl
puxle/data/pddls/gripper/: domain.pddl  manifest.json
puxle/data/pddls/gripper/problems/: gr-H-01.pddl  gr-S-01.pddl  gr-S-02.pddl  gr-S-03.pddl  gr-S-04.pddl
puxle/data/pddls/logistics/: domain.pddl  manifest.json
puxle/data/pddls/logistics/problems/: lg-H-01.pddl  lg-S-01.pddl  lg-S-02.pddl  lg-S-03.pddl  lg-S-04.pddl
puxle/data/pddls/rovers/: domain.pddl  manifest.json
puxle/data/pddls/rovers/problems/: rv-H-01.pddl  rv-S-01.pddl  rv-S-02.pddl  rv-S-03.pddl  rv-S-04.pddl
puxle/data/pddls/satellite/: domain.pddl  manifest.json
puxle/data/pddls/satellite/problems/: st-H-01.pddl  st-S-01.pddl  st-S-02.pddl  st-S-03.pddl  st-S-04.pddl
puxle/data/sokoban/: __init__.py
puxle/data/sokoban/imgs/: __init__.py
puxle/pddls/: __init__.py  artifact_cache.py  evaluation.py  formatting.py  fusion.py  grounding.py  masks.py  pddl.py  state_defs.py  type_system.py  validation.py
puxle/pddls/fusion/: action_modifier.py  api.py  domain_fusion.py  formula_facts.py  problem_generator.py  type_facts.py  validator.py
puxle/puzzles/: __init__.py  cayley_puzzle.py  cayley_subclasses.py  cvrp.py  dotknot.py  hanoi.py  jobshop.py  knapsack.py  lightsout.py  maze.py  pancake.py  room.py  rubikscube.py  slidepuzzle.py  sokoban.py  topspin.py  tsp.py
puxle/render/: __init__.py  state_renderer.py
puxle/render/backends/: __init__.py  cv2_backend.py
puxle/utils/: __init__.py  util.py
scripts/: check_lightsout_benchmark.py  check_rubikscube_benchmark.py  compare_lightsout_dynamics.py  compare_rubikscube_dynamics.py  cube3.py  environment_abstract.py  generate_rubiks_hard_case.py  parse_santa_puzzles.py  visualize_puzzle.py
tests/: __init__.py  test_action_contract.py  test_all_puzzles.py  test_ansi_coloring.py  test_benchmark_logic.py  test_benchmarks.py  test_cayley_puzzle.py  test_cayley_subclasses.py  test_immutability.py  test_pddl_formatting.py  test_puzzle_modules.py  test_puzzle_renderer.py  test_puzzle_state.py  test_rubikscube_santa_csv.py  test_rubikscube_string_formatter.py  test_rubikscube_symmetries.py  test_solve_config_structure.py  test_string_parser_host_only.py  test_trajectories.py
tests/pddl_data/bad/: domain.pddl
tests/pddl_data/constants/: domain.pddl  problem.pddl
tests/pddl_data/disjunctive/: domain.pddl  problem.pddl
tests/pddl_data/door_move/: domain.pddl  problem.pddl
tests/pddl_data/either_move/: domain.pddl  problem.pddl
tests/pddl_data/equality/: domain.pddl  problem.pddl
tests/pddl_data/negative/: domain.pddl  problem.pddl
tests/pddl_data/negative_goal/: domain.pddl  problem.pddl
tests/pddl_data/simple_move/: domain.pddl  problem.pddl
tests/pddl_data/toggle/: domain.pddl  problem.pddl
tests/pddl_data/typed_move/: domain.pddl  problem.pddl
tests/pddl_data/unreachable_move/: problem.pddl
tests/pddl_data/zero_arity/: domain.pddl  problem.pddl
tests/pddls/: __init__.py  conftest.py  data_specs.py  reference_strips.py  test_basic_simple_move.py  test_equivalence.py  test_errors.py  test_features.py  test_fusion.py  test_hard_instances.py  test_parametric.py  test_presets.py  test_presets_functional.py  test_refinement.py  test_semantics.py
tests/pddls/fusion/: test_formula_facts.py  test_paper_alignment.py
