[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puxle"
version = "0.1.0"
description = "Parallelized Puzzles implementation based on JAX - High-performance puzzle environments for AI research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KyuSeok Jung", email = "wjdrbtjr495@gmail.com"}
]
maintainers = [
    {name = "KyuSeok Jung", email = "wjdrbtjr495@gmail.com"}
]
keywords = [
    "puzzles",
    "jax", 
    "ai",
    "reinforcement-learning",
    "parallel-computing",
    "puzzle-environments",
    "search-algorithms"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4.0",
    "chex>=0.1.0",
    "tabulate>=0.9.0",
    "termcolor>=1.1.0",
    "numpy>=1.20.0",
    "xtructure @ git+https://github.com/tinker495/xtructure.git",
]

[project.optional-dependencies]
cuda = ["jax[cuda]>=0.4.0"]
cpu = ["jax[cpu]>=0.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/tinker495/puxle"
Repository = "https://github.com/tinker495/puxle"
Documentation = "https://github.com/tinker495/puxle#readme"
"Bug Tracker" = "https://github.com/tinker495/puxle/issues"
Changelog = "https://github.com/tinker495/puxle/releases"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["puxle*"]
exclude = ["tests*", "docs*", "examples*", "puxle.data*"]

[tool.setuptools.package-data]
puxle = [
    "data/**/*.npy",
    "data/**/*.png", 
    "data/**/*.jpg",
    "data/**/*.jpeg",
    "data/**/*.gif",
    "data/**/*.txt",
    "data/**/*.json",
    "data/**/*.yaml",
    "data/**/*.yml",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--cov=puxle",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 