[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests", "."]
pythonpath = ["."]
addopts = "-v --tb=short --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E121",  # continuation line under-indented for hanging indent
    "E123",  # closing bracket does not match indentation of opening bracket's line
    "E126",  # continuation line over-indented for hanging indent
    "E203",  # whitespace before ':'
    "E226",  # missing whitespace around arithmetic operator
    "E24",   # whitespace before '('
    "E704",  # multiple statements on one line (def)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["puxle"]
